frontend/test/should_pass/global_then_in_package_sequene.grg
#using "model.gm"

sequence seq
{
	true
}

package Foo
{
	// was error: seq already defined
	sequence seq
	{
		true
	}
}
